Name:                nbt
Version:             0.2
Synopsis:            A parser/serializer for Minecraft's Named Binary Tag (NBT) data format.
Homepage:            http://github.com/acfoltzer/nbt
License:             BSD3
License-file:        LICENSE
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Data.NBT
  Build-depends:       base >= 4, 
                       bytestring >= 0.9.1.10,
                       cereal >= 0.3.3.0