Name:                nbt
Version:             0.2
Synopsis:            A parser/serializer for Minecraft's Named Binary Tag (NBT) data format.
Homepage:            http://github.com/acfoltzer/nbt
License:             BSD3
License-file:        LICENSE
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Data.NBT
  Build-depends:       base >= 4, 
                       binary >= 0.5.0.2,
                       bytestring >= 0.9.1.10,
                       data-binary-ieee754 >= 0.4.2.1,
                       utf8-string >= 0.3.6,
                       zlib >= 0.5.3.1,
                       QuickCheck