Name:                nbt-tests
Version:             0.1
Homepage:            http://github.com/acfoltzer/nbt
License:             BSD3
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.8

Executable tests
  Main-is:	       Data/NBT/Tests.hs
  Build-depends:       base == 4.*,
                       bytestring == 0.9.*,
                       cereal == 0.3.4.*,
                       zlib == 0.5.*,
                       QuickCheck == 2.4.*,
                       test-framework == 0.4.*,
                       test-framework-quickcheck2 == 0.2.*,
                       nbt