Name:                nbt-tests
Version:             0.1
Homepage:            http://github.com/acfoltzer/nbt
License:             BSD3
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.8

Executable nbt-tests
  Main-is:	       Tests.hs
  Build-depends:       base == 4.*,
                       bytestring == 0.9.*,
                       binary == 0.5.*,
                       zlib == 0.5.*,
                       utf8-string == 0.3.*,
                       HUnit == 1.2.*,
                       QuickCheck == 2.4.*,
                       test-framework == 0.4.*,
                       test-framework-quickcheck2 == 0.2.*,
                       test-framework-hunit == 0.2.*,
                       nbt